--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -57,7 +57,7 @@
                     <!--  -->
                     <form
                       class="mx-1 mx-md-4"
-                      action="/furnica/admin/login"
+                      action="/admin/login"
                       method="post"
                     >
                       <div class="form-outline mb-4">
