--- a/views/admin/banner.ejs
+++ b/views/admin/banner.ejs
@@ -10,7 +10,7 @@
                    <div class="container ">
                     <h2 class="mt-3">Banner</h2>
 <div class="col-sm-6 col-10 m-auto">
-    <form action="/furnica/admin/newbanner" method="POST" enctype="multipart/form-data">
+    <form action="/admin/newbanner" method="POST" enctype="multipart/form-data">
         <div class="form-group">
           <label for="productImage">Banner Heading:</label>
       <input type="text" name="heading" class="form-control"  id="category" placeholder="Enter heading" required>
@@ -48,9 +48,9 @@
   <div class="card-body">
     <h5 class="card-title"><%= locals.bannerdata[index].heading %></h5>
     <p class="card-text"><%= locals.bannerdata[index].subheading %></p>
-    <a href="/furnica/admin/updatebanner?bannerId=<%= locals.bannerdata[index]._id %>">
+    <a href="/admin/updatebanner?bannerId=<%= locals.bannerdata[index]._id %>">
       <button class="badge-success badge rounded-pill" style="border: none;" ><i class="fa-solid fa-pen-to-square"></i> </button></a>
-      <a href="/furnica/admin/deletebanner?bannerId=<%= locals.bannerdata[index]._id %>">
+      <a href="/admin/deletebanner?bannerId=<%= locals.bannerdata[index]._id %>">
       <button  class="badge-danger badge rounded-pill" style="border: none" ><i class="fa-solid fa-trash"></i></button></a>
   </div>
 </div>
