--- a/views/admin/categorylist.ejs
+++ b/views/admin/categorylist.ejs
@@ -6,7 +6,7 @@
                   <div class="col-12 col-sm-4 m-auto border-3 border border-light p-2 rounded-4 ">
                
                      
-                    <form action="/furnica/admin/addcategory" method="POST" enctype="multipart/form-data">
+                    <form action="/admin/addcategory" method="POST" enctype="multipart/form-data">
                         <div class="form-group">
                           <label for="productImage">Category Name:</label>
                       <input type="text" name="category" class="form-control"  id="category" placeholder="category" required>
@@ -15,7 +15,6 @@
                       <label for="productImage">Category Image:</label>
 
                       <input type="file"  class="form-control" id='imageInput' accept="image/*" multiple name="image"  required>
-                      <!-- <input type="file" class="form-control-file"  id="productImage" multiple name="image"  required> -->
                     </div>
                     <div class="mt-3">
                       <button type="submit" id="submit_btn" class="btn btn-primary rounded-pill mb-4">Submit</button>
@@ -34,7 +33,7 @@
             <div class="col-sm-2 col-10 mx-auto mb-3 text-center" style="margin-left: 1rem;" >
                 <img class="img-fluid"  style="height: 60%;width: 90%;"src="/uploads/<%= locals.category[index].imageUrl[0] %> " alt="not loaded">
                 <h4> <%= locals.category[index].category %> </h4>
-                <a href="/furnica/admin/updateCategory/<%= locals.category[index]._id %>">
+                <a href="/admin/updateCategory/<%= locals.category[index]._id %>">
                 <button type="button" class="btn btn-success rounded-pill">
                   Edit
                 </button></a>
