--- a/views/admin/newProduct.ejs
+++ b/views/admin/newProduct.ejs
@@ -1,11 +1,9 @@
 <%- include('../htmlbody/Adminheader') -%>
 
                 <main class="col-12 col-md-8 m-auto">
-                  <!--  -->
-
                   <h2 class=" mt-4">Create Product</h2>
                  
-                  <form action="/furnica/admin/addProduct" method="POST" enctype="multipart/form-data">
+                  <form action="/admin/addProduct" method="POST" enctype="multipart/form-data">
                    <div class="row">
                      <div class="form-group col-12 col-sm-6">
                       <label for="productName">Product Name:</label>
@@ -47,7 +45,7 @@
                     <div class="form-group">
                       <label for="productImage">Product Image:</label>
                       <input type="file" class="form-control" id="imageInput" multiple name="image" accept="image/*" onchange="resizeImage(event)" required>
-                      <!-- <input type="file"  class="form-control"  id="imageInput" multiple name="image" accept="image/*" required> -->
+          
                     </div>
 
                     <span id="errordetail"></span>
