--- a/views/admin/orderdetails.ejs
+++ b/views/admin/orderdetails.ejs
@@ -10,7 +10,7 @@
     <div class=" mx-4 col-lg-8 col-md-12 mb-4 mb-lg-0 ">
 
         <div class=" py-3 ">
-            <h5 class="mb-0">   Order details</h5>
+            <h5 class="mb-0">Order details</h5>
             </div>
     <% for( let index = 0; index < orders.product.length; index++) { %>
         <div class="row context_box">
@@ -80,17 +80,11 @@
                 <span><strong><i class="fa-solid fa-indian-rupee-sign"></i> <span> <%= orders.total  %></span></strong></span>
               </li>
             </ul>
-
-          
-      
       </div>   
    <!--  -->
     </div>
  
     </div>
-
-    
-<!-- bottom section -->
 
     </div>
   <div class="container">
@@ -126,7 +120,7 @@
    
    const statusbar=document.getElementById(`statusbar${id}`).value
 
-   await fetch('/furnica/admin/updatestatus', {
+   await fetch('/admin/updatestatus', {
 method: 'POST',
 headers: {
   'Content-Type': 'application/json'
@@ -137,7 +131,8 @@ body: JSON.stringify(
   status:statusbar
   }
 )
-}).then((res)=>res.json()).then((data)=>{
+}).then((res)=>res.json())
+.then((data)=>{
  if(data==="success"){
    window.location.reload()
  }
