--- a/views/admin/orderslist.ejs
+++ b/views/admin/orderslist.ejs
@@ -69,12 +69,12 @@ style="border: none;outline: none; height: 40px;" >
     </td>       
     <td>
         <% if (orders[i].status=="Cancelled") { %>
-          <a href="/furnica/admin/orderdetail/<%= orders[i]._id%>">
+          <a href="/admin/orderdetail/<%= orders[i]._id%>">
             <button class="btn btn-light rounded-pill">details</button></a>
             <i style="cursor: pointer;font-size: 1.5rem;" class="fa-regular fa-circle-xmark m-auto"  onclick="handleOrderRemove('<%= orders[i]._id %>')"></i>
         
           <% } else { %>
-            <a href="/furnica/admin/orderdetail/<%= orders[i]._id%>">
+            <a href="/admin/orderdetail/<%= orders[i]._id%>">
               <button class="btn btn-light rounded-pill">details</button></a>
           <% } %>
     </td>  
@@ -102,7 +102,7 @@ const handlestatus=async(id)=>{
    
     const statusbar=document.getElementById(`statusbar${id}`).value
 
-    await fetch('/furnica/admin/updatestatus', {
+    await fetch('/admin/updatestatus', {
  method: 'POST',
  headers: {
    'Content-Type': 'application/json'
@@ -123,7 +123,7 @@ const handlestatus=async(id)=>{
 
         const handleOrderRemove=async(id)=>{
        
-            await fetch('/furnica/admin/removerOrder', {
+            await fetch('/admin/removerOrder', {
  method: 'POST',
  headers: {
    'Content-Type': 'application/json'
