--- a/views/admin/salesreport.ejs
+++ b/views/admin/salesreport.ejs
@@ -7,18 +7,13 @@
 
                  <div class="row ">               
                     <div class="col-6 text-center  m-auto rounded-pill text-light p-1 bg-primary" style="display: flex;  justify-content: center;align-items: center;">
-                       
-                        <!-- <div class="col-12 text-center  m-auto " style="display: flex;justify-content: space-around;" > -->
+           
                             <h2 id="headname"> <%= locals.durations %> </h2> 
                            <h2 class="mx-2"> orders</h2>
-                        
-                        <!-- </div>   -->
-                        
                         <h1><%= locals.orderlength  %></h1> 
                         <button class="btn" onclick="handlepdf('<%= locals.durations %>')">
                             <i style="font-size: 1.2rem;color: white;" class="fa-solid fa-download"></i>
                         </button>
-                        <!-- <button class="btn" onclick="handleReportdetail('<% locals.durations%>')">details</button> -->
                     </div>       
 </div>
 <p id="pdfpopup" style="color:green"></p>
@@ -26,7 +21,6 @@
                     </div>
 
              </div>      
-            <!-- list or sales report -->
      <div class="row mt-3">
       <div class="col-12 grid-margin stretch-card">
         <div class="card">
@@ -99,7 +93,7 @@
 
     // pdf
     const handlepdf=async(duration)=>{   
-        await fetch(`/furnica/admin/pdfconvert?duration=${duration}`, {
+        await fetch(`/admin/pdfconvert?duration=${duration}`, {
  method: 'GET',
  headers: {
    'Content-Type': 'application/json'
