--- a/views/admin/updatecategory.ejs
+++ b/views/admin/updatecategory.ejs
@@ -2,7 +2,7 @@
 <%- include('../htmlbody/Adminheader') -%>
                 <main>
                   <!--  -->
-                  <form action="/furnica/admin/updateCategory/<%= locals.param %>" method="post" enctype="multipart/form-data">
+                  <form action="/admin/updateCategory/<%= locals.param %>" method="post" enctype="multipart/form-data">
                   
                     <div class="form-group col-12 col-sm-4 m-auto mt-4" >
               
