--- a/views/htmlbody/Adminheader.ejs
+++ b/views/htmlbody/Adminheader.ejs
@@ -49,11 +49,8 @@ button>i{
                 <span class="nav-profile-name">Maheeendran</span>
               </a>
               <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="profileDropdown">
-                <a class="dropdown-item">
-                <i class="typcn typcn-cog text-primary"></i>
-                Settings
-                </a>
-                <a class="dropdown-item" href="/furnica/admin/logout">
+              
+                <a class="dropdown-item" href="/admin/logout">
                 <i class="typcn typcn-power text-primary"></i>
                 Logout
                 </a>
@@ -118,20 +115,20 @@ button>i{
             <p class="sidebar-menu-title">Dash menu</p>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/furnica/admin/dashboard">
+            <a class="nav-link" href="/admin/dashboard">
               <i class="typcn typcn-device-desktop menu-icon"></i>
               <span class="menu-title">Dashboard </span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/furnica/admin/users">
+            <a class="nav-link" href="/admin/users">
               <i class="typcn typcn-device-desktop menu-icon"></i>
               <span class="menu-title">Users </span>
             </a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/furnica/admin/banner">
+            <a class="nav-link" href="/admin/banner">
               <i class="typcn typcn-document-text menu-icon"></i>
               <span class="menu-title">Banners</span>
             </a>
@@ -144,20 +141,20 @@ button>i{
             </a>
             <div class="collapse" id="ui-basic">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link"  href="/furnica/admin/productlist" >Products lists</a></li>
-                <li class="nav-item"> <a class="nav-link" href="/furnica/admin/addproduct">create product</a></li>
+                <li class="nav-item"> <a class="nav-link"  href="/admin/productlist" >Products lists</a></li>
+                <li class="nav-item"> <a class="nav-link" href="/admin/addproduct">create product</a></li>
               </ul>
             </div>
           </li>
 <!--  -->
 <li class="nav-item">
-  <a class="nav-link" href="/furnica/admin/addcategory">
+  <a class="nav-link" href="/admin/addcategory">
     <i class="typcn typcn-chart-pie-outline menu-icon"></i>
     <span class="menu-title">Category</span>
   </a>
 </li>
 <li class="nav-item">
-  <a class="nav-link" href="/furnica/admin/coupons">
+  <a class="nav-link" href="/admin/coupons">
     <i class="typcn typcn-chart-pie-outline menu-icon"></i>
     <span class="menu-title">Coupon</span>
   </a>
@@ -165,14 +162,14 @@ button>i{
 
        
           <li class="nav-item">
-            <a class="nav-link"  href="/furnica/admin/orders">
+            <a class="nav-link"  href="/admin/orders">
               <i class="typcn typcn-chart-pie-outline menu-icon"></i>
               <span class="menu-title">Orders</span>
             </a>
           </li>
        
           <li class="nav-item">
-            <a class="nav-link"  href="/furnica/admin/offermanagement">
+            <a class="nav-link"  href="/admin/offermanagement">
               <i class="typcn typcn-compass menu-icon"></i>
               <span class="menu-title">Offers</span>
             </a>
@@ -185,9 +182,9 @@ button>i{
             </a>
             <div class="collapse" id="tables1">
               <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link"   href="/furnica/admin/salesreport/Daily">Daily</a></li>
-                <li class="nav-item"> <a class="nav-link"   href="/furnica/admin/salesreport/Weekly">Weekly</a></li>
-                <li class="nav-item"> <a class="nav-link"   href="/furnica/admin/salesreport/Yearly">Yearly</a></li>
+                <li class="nav-item"> <a class="nav-link"   href="/admin/salesreport/Daily">Daily</a></li>
+                <li class="nav-item"> <a class="nav-link"   href="/admin/salesreport/Weekly">Weekly</a></li>
+                <li class="nav-item"> <a class="nav-link"   href="/admin/salesreport/Yearly">Yearly</a></li>
               
               </ul>
             </div>
