--- a/views/user/home.ejs
+++ b/views/user/home.ejs
@@ -82,7 +82,7 @@ background: linear-gradient(0deg, rgba(24,24,22,0.9016398795846463) 10%, rgba(25
 
 <% for( let i = 0; i < locals.category.length; i++ ) { %>
 <div class="col-12 col-sm-6 col-md-4 m-auto mb-5" >
-<a style="text-decoration: none;"  href="/furnica/products/<%= locals.category[i]._id %>">
+<a style="text-decoration: none;"  href="/products/<%= locals.category[i]._id %>">
 <div class="catg_card">
 <div class="card_imag">
 <img src="/uploads/<%= locals.category[i].imageUrl[0] %> " alt="">
@@ -154,8 +154,6 @@ background: linear-gradient(0deg, rgba(24,24,22,0.9016398795846463) 10%, rgba(25
 </div>
 
 <!-- best selling -->
-
-
 <div class="container text-center m-auto mt-5 ">
 <h4>Explore Our New Arrival Furniture </h4>
 </div>
