--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -18,12 +18,11 @@
   <body>
     <section class="vh-100 login_main">
       <div class="container h-100">
-        <a href="/home">
-          <img class="mt-2" src="/assests/logo.png" alt="" style="position: absolute;top: 10px;"
-        /></a>
+        <a href="/">
+          <img class="mt-2" src="/assests/logo.png" alt="" style="position: absolute;top: 10px;z-index: 1;"/></a>
         <div class="row d-flex justify-content-center align-items-center h-100">
+
           <div class="col-lg-12 col-xl-11 m-auto">
-           
             <div class="card text-black border-0 ">
               <div class="card-body  login_submain overflow-hidden">
                 <div class="col-12 wave_login">
