--- a/views/user/productDetail.ejs
+++ b/views/user/productDetail.ejs
@@ -144,27 +144,20 @@
     <div class="row gx-4">
       <div class="col-lg-8 mb-4">
         <div class="border rounded-2 px-3 py-2 bg-white">
-          <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
-            <li class="nav-item d-flex" role="presentation">
+          <ul class="nav nav-pills nav-justified mb-3"  >
+            <li class="nav-item d-flex" >
               <a
-                class="nav-link d-flex align-items-center justify-content-center w-100 active"
-                id="ex1-tab-1"
-                data-mdb-toggle="pill"
-                href="#ex1-pills-1"
-                role="tab"
-                aria-controls="ex1-pills-1"
-                aria-selected="true"
+                class="nav-link active"
+
                 >Specification</a
               >
             </li>
           </ul>
 
-          <div class="tab-content" id="ex1-content">
+          <div class="tab-content" >
             <div
               class="tab-pane fade show active"
-              id="ex1-pills-1"
-              role="tabpanel"
-              aria-labelledby="ex1-tab-1"
+             
             >
               <p><%= details.overview %></p>
             </div>
