--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -164,11 +164,11 @@ alt="Avatar" class="img-fluid my-5" style="width: 80px;" />
 <h6>Email</h6>
 <p class="text-muted"><%= locals.userdata.email  %></p>
 </div>
-<div class="col-5 col-sm-6 mb-3">
+<div class=" col-12 col-sm-6 mb-3">
 <h6>Phone</h6>
 <p class="text-muted"><%= locals.userdata.mobile  %></p>
 </div>
-<div class="col-7 col-sm-6 mb-3 text-center">
+<div class="col-12 col-sm-6 me-auto">
   <button class="btn" onclick="handlereferral()">Referral code <span><i style="color: rgb(244, 149, 16);" class="fa-solid fa-ticket"></i></span></button>
   <div class="row mt-2" id="showCode" style="display: flex;">
  <span class="text-muted" id="refferalCode"><%= locals.userdata.referralCode%> </span>
