--- a/views/user/signup.ejs
+++ b/views/user/signup.ejs
@@ -19,7 +19,7 @@
     <!-- =============================== -->
     <section class="vh-100 login_main mt-4">
       <div class="container h-100">
-        <a href="/home">
+        <a href="/">
           <img class="mt-2" src="/assests/logo.png" alt="" style="position: absolute;top: 10px;z-index:1;"
         /></a>
         <div class="row d-flex justify-content-center align-items-center ">
